<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/top_tab"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_puripuri_logo" >
        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:background="@drawable/top_right_button" />
		<Button
            android:id="@+id/g001_btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="5dp"
            android:background="@drawable/d001_back_button" /> 
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlayout2"
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true">
        <include layout="@layout/bottom_bar"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_above="@+id/rlayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/relativeLayout1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/g001_to_g002"
                    android:layout_width="match_parent"
                    android:layout_height="0px"
                    android:layout_weight="100"
                    android:padding="10dp" >

                    <LinearLayout
                        android:layout_width="0px"
                        android:layout_height="match_parent"
                        android:layout_weight="12"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/e001_padding_left" >

                        <TextView
                            android:id="@+id/TextView09"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/e001_row2_1"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0px"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/g001_row1_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/e001_row1_2"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/gray"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0px"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="vertical" >

                        <ImageView
                            android:id="@+id/ImageView04"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/arrow" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0px"
                    android:layout_weight="1"
                    android:background="@drawable/divider_line"
                    android:orientation="vertical" >
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/g001_to_g003"
                    android:layout_width="match_parent"
                    android:layout_height="0px"
                    android:layout_weight="100"
                    android:padding="10dp" >

                    <LinearLayout
                        android:layout_width="0px"
                        android:layout_height="match_parent"
                        android:layout_weight="12"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/e001_padding_left" >

                        <TextView
                            android:id="@+id/TextView07"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/e001_row3_1"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0px"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/g001_row2_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/e001_row1_2"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/gray"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0px"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="vertical" >

                        <ImageView
                            android:id="@+id/ImageView03"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/arrow" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0px"
                    android:layout_weight="1"
                    android:background="@drawable/divider_line"
                    android:orientation="vertical" >
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/g001_to_g004"
                    android:layout_width="match_parent"
                    android:layout_height="0px"
                    android:layout_weight="100"
                    android:padding="10dp" >

                    <LinearLayout
                        android:layout_width="0px"
                        android:layout_height="match_parent"
                        android:layout_weight="12"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/e001_padding_left" >

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/g003_title"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0px"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/g001_row3_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/e001_row1_2"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/gray"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0px"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="vertical" >

                        <ImageView
                            android:id="@+id/imageView1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/arrow" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/g001_search_button"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/black_bar_left"
                    android:text="@string/e001_button_left"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/g001_reset_button"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/black_bar_right"
                    android:text="@string/e001_button_right"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/yellow_bg"
                android:orientation="vertical" >

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>